use a commit of python-linter where black is up to date

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -74,7 +74,9 @@ jobs:
     - name: Python Linter
       # You may pin to the exact commit or the version.
       # uses: sunnysid3up/python-linter@93076bd8f740f062069291d738fc70c1b4171c1d
-      uses: sunnysid3up/python-linter@v0.1-beta.7
+      # uses: sunnysid3up/python-linter@v0.1-beta.7
+      # the commit that fixes black
+      uses: sunnysid3up/python-linter@b16266aa9daf722fd596115c57907d73df709887
       with:
         # Source file or directory
         source: "."
