adding an isort argument to only show diff

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -88,3 +88,5 @@ jobs:
         pylint-options: ""
         # Black options
         black-options: "--check"
+        # isort options
+        isort-options: "--diff"
