fixed misplaced quote marks in pylint workflow

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -20,6 +20,6 @@ jobs:
         pip install pylint mypy black
     - name: Analysing the code with pylint
       run: |
-        pylint $(git ls-files '*.py|grep -v lambda_types')
-        mymy $(git ls-files '*.py|grep -v lambda_types') --strict
-        black $(git ls-files '*.py|grep -v lambda_types') --check
+        pylint $(git ls-files '*.py'|grep -v lambda_types)
+        mymy $(git ls-files '*.py'|grep -v lambda_types) --strict
+        black $(git ls-files '*.py'|grep -v lambda_types) --check
