--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -21,5 +21,5 @@ jobs:
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py'|grep -v lambda_types)
-        mymy $(git ls-files '*.py'|grep -v lambda_types) --strict
-        black $(git ls-files '*.py'|grep -v lambda_types) --check
+        python -m mymy $(git ls-files '*.py'|grep -v lambda_types) --strict
+        python -m black $(git ls-files '*.py'|grep -v lambda_types) --check
