--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -1,4 +1,4 @@
-name: Pylint
+name: Formatting Check
 
 on: [push]
 
@@ -17,7 +17,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint
-    - name: Analysing the code with pylint
+        pip install black
+    - name: Checking code formatting with black
       run: |
-        pylint $(git ls-files '*.py'|grep -v lambda_types)
+        black $(git ls-files '*.py'|grep -v lambda_types) --check
